--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -34,19 +34,19 @@ services:
             - ./:/var/www
             - .docker/default.conf:/etc/nginx/conf.d/default.conf
 
-    db:
-        image: mysql:8.0.29
-        container_name: job-board-db
-        command: --default-authentication-plugin=mysql_native_password --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
-        restart: 'no'
-        tty: true
-        environment:
-            MYSQL_DATABASE: ${DB_DATABASE:-"job-board"}
-            MYSQL_ROOT_PASSWORD: ${DB_PASSWORD:-secret}
-            MYSQL_PASSWORD: ${DB_PASSWORD:-secret}
-            MYSQL_USER: ${DB_USERNAME:-"job-board"}
-        ports:
-            - "${DOCKER_DB_EXPOSED_PORT:-3306}:3306"
+#    db:
+#        image: mysql:8.0.29
+#        container_name: job-board-db
+#        command: --default-authentication-plugin=mysql_native_password --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
+#        restart: 'no'
+#        tty: true
+#        environment:
+#            MYSQL_DATABASE: ${DB_DATABASE:-"job-board"}
+#            MYSQL_ROOT_PASSWORD: ${DB_PASSWORD:-secret}
+#            MYSQL_PASSWORD: ${DB_PASSWORD:-secret}
+#            MYSQL_USER: ${DB_USERNAME:-"job-board"}
+#        ports:
+#            - "${DOCKER_DB_EXPOSED_PORT:-3306}:3306"
 
 #    npm:
 #      image: node:15-alpine
