--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,25 +2,35 @@ version: "3.7"
 
 services:
     app:
+        user: ${DOCKER_USER:-1000}:${DOCKER_UID:-1001}
         build:
-            args:
-                user: ${DOCKER_USER:-1000}
-                uid: ${DOCKER_UID:-1001}
             context: ./
             dockerfile: .docker/Dockerfile
         environment:
             DB_USERNAME: root
             DB_PASSWORD: secret
+            PHP_IDE_CONFIG: 'serverName=job-board.local'
         extra_hosts:
             - "host.docker.internal:host-gateway"
         container_name: job-board-app-container
         restart: 'no'
         working_dir: /var/www
         tty: true
-        depends_on:
-            - db
+#        depends_on:
+#            - db
         volumes:
             - ./:/var/www
+
+    composer:
+      user: ${DOCKER_USER:-1000}:${DOCKER_UID:-1001}
+      image: composer:2.3.10
+      restart: 'no'
+      working_dir: /var/www
+      tty: true
+      volumes:
+        - ./:/var/www
+
+
     server:
         container_name: job-board-server
         image: nginx:1.23.1-alpine
